# data-curation-suite

./: .gitignore  Makefile  README.md  config.py  dataloader.py  main.py  model.py  pyproject.toml  test.py  vllm_setup.py
minimal_tarsier/: vllm_test.py
tarsier_vllm/: README.md  gen_image_desc.py  gen_image_seq.py  gen_seq_desc.py  gen_video_desc.py  gen_video_enhance.py
tarsier_vllm/scripts/: deakin.py
