[project]
name = "activity-description-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "autoawq>=0.2.9",
    "fschat>=0.2.36",
    "transformers>=4.54.1",
    "numpy<2",
    "qwen-vl-utils[decord]>=0.0.14",
    "setuptools>=80.9.0",
    "torch==2.9.0+cu126",
    "vllm==0.11.2",
    "huggingface-hub>=0.9.0",
    "sentence-transformers==2.7.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
